# isucon6-qualify

./: LICENSE  Makefile  README.md  Regulation.md  URLs.txt  docker-compose.yml
bench/: .gitignore  Makefile  README.md  bench.go  cli.go  data  keyword.go  loadassets.go  scenario.go  userdata.go
bench/cache/: cache.go
bench/checker/: action.go  session.go
bench/isucon6q/: isucon6-bench-worker.service
bench/score/: output.go  score.go
bench/worker/: worker.go
cmd/importpages/: main.go
cmd/isupam/: go.mod  main.go
config/: nginx.conf
db/: isuda.sql
docker/: api.dockerfile  isupam.dockerfile  mysql.dockerfile
portal/: .gitignore  Makefile  README.md  debug.go  glide.yaml  jobhandler.go  main.go  package.json  queue.go  queue_test.go  web.go  web_test.go
portal/bench/: q.go
portal/data/: teams.tsv
portal/db/: schema.sql
portal/job/: job.go
portal/views/: debug-leaderboard.tmpl  debug-queue.tmpl  index.tmpl  layout.tmpl  login.tmpl
provisioning/: .gitignore  build.sh
provisioning/bench/: deploy.json  deploy.json.template  init.sh
provisioning/image/: db_setup.sh  init.sh
provisioning/portal/: deploy.json  deploy.json.template  init.sh
provisioning/qualifier/: deploy.json  deploy.json.template  init.sh
tools/: build_isupam.sh  filter_all.pl  filter_init_json.pl  filter_new.pl  filter_ok_json.pl  keyword_relation.pl  merge_keywords.pl
tools/db/: do-isutar-sql  do-sql  setup_keyword.pl  users.pl
webapp/go/: Makefile  isuda.go  isutar.go  type.go  util.go
webapp/rust/: Cargo.toml
webapp/rust/src/: main.rs  sesson_backend.rs
(+236 files in other folders)
